scss/layout/_header.scss
/**
*
* header.scss
*
* One of the fundamental parts of a website.
* It includes:
* - Navigation bar
* - Logo
* - Menu button
 layout header  */

.l-header {
  .top-bar {
    display: none;

    .group {
      display: none;

      .header-img {
        margin: 1%;
        height: 18px;
      }

      .header-img-2 {
        margin: 1%;
        height: 18px;
      }
    }
  }

  .logo-text {
    font-family: 'cocogoose_proregular', sans-serif;
    display: none;
  }

  &__nav {
    .menu-btn {
      display: block;
      position: absolute;
      cursor: pointer;
      left: 5%;
      top: 2.5%;
      z-index: 3;
      animation: rotate 0.5s ease-in-out;

      div {
        width: 36px;
        height: 5px;
        margin-bottom: 5px;
        display: block;
        background-color: $color-primary;
        position: relative;
        left: 5%;
      }
    }
    // This class is used when the menu modal is close
    // It appears always that the open class is apply

    .open {
      left: 5%;
      animation: menu-btn-arrives 1s ease-in-out;

      .line-1 {
        background-color: $color-primary;
        transform: translateY(0) rotate(0deg);
        animation: line-1-arrives 1s ease-in-out;
      }

      .line-2 {
        display: block;
        transform: translateY(0) rotate(0deg);
        animation: line-2-arrives 1s ease-in-out;
      }

      .line-3 {
        background-color: $color-primary;
        transform: translateY(0) rotate(0deg);
        animation: line-3-arrives 1s ease-in-out;
      }
    }

    /* This class is used when the menu modal is open
      It overrides the configuration of 'menu-btn' */
    .close {
      left: 85%;
      animation: menu-btn-leaves 1s ease-in-out;
      position: fixed;

      .line-1 {
        background-color: $color-secondary;
        transform: translateY(11px) rotate(45deg);
        animation: line-1-leaves 1s ease-in-out;
      }

      .line-2 {
        display: none;
        animation: line-2-leaves 1s ease-in-out;
      }

      .line-3 {
        background-color: $color-secondary;
        transform: translateY(0) rotate(-45deg);
        animation: line-3-leaves 1s ease-in-out;
      }
    }

    .menu-buttons {
      width: 100%;
      height: 100vh;
      background-image: url('../images/background.svg');
      background-repeat: no-repeat;
      background-size: cover;
      display: flex;
      flex-direction: column;
      position: fixed;
      align-items: flex-start;
      padding-top: 10%;
      z-index: 2;

      a {
        margin-top: 10%;
        margin-left: 10%;
        font-size: 24px;
        text-decoration: unset;
        color: $color-secondary;
        font-family: sans-serif;
        font-weight: 700;
      }

      .btn-3 {
        display: none;
      }
    }

    .init {
      visibility: hidden;
      top: 100vh;
    }

    .rise {
      top: 0.000001vh;
      visibility: visible;
      animation: rise 0.5s ease-in-out;
    }

    .dawn {
      top: 100vh;
      visibility: hidden;
      animation: dawn 0.5s ease-in-out;
    }
  }

  @media only screen and (min-width: 768px) {
    position: fixed;
    height: 48px;
    display: contents;
    top: 0.00000001vh;
    z-index: 1;

    .top-bar {
      display: grid;
      grid-template-columns: 5% 10% 20% 60% 5%;
      width: 100%;
      height: 32px;
      background-color: $color-primary;
      color: $color-white;
      font-family: 'Lato', Verdana, Geneva, Tahoma, sans-serif;
      z-index: 1;
      position: relative;

      .group {
        height: 32px;
        width: unset;
        color: white;
        display: flex;
        grid-column-start: 4;
        place-content: flex-end;
        align-items: center;
        margin-left: unset;

        a {
          margin-left: 1%;
          margin-right: 1%;
          cursor: pointer;

          .header-img {
            height: 16px;
            color: $color-white;
          }

          .header-img-2 {
            height: 16px;
            color: $color-white;
          }
        }

        h6 {
          cursor: pointer;
          font-weight: 600;
          font-size: 12px;
          margin-left: 1%;
          margin-right: 1%;
        }
      }
    }

    &__nav {
      background-color: white;
      position: relative;
      display: grid;
      grid-template-columns: 5% 10% 20% 60% 5%;
      z-index: 1;

      .logo-text {
        position: relative;
        display: grid;
        align-items: center;
        grid-column-start: 3;

        .header-img-3 {
          height: 48px;
        }
      }
    }

    .menu-btn {
      display: none;
    }

    .menu-buttons {
      align-items: center;
      grid-column-start: 4;
      visibility: visible;
      position: relative;
      height: 64px;
      top: unset;
      padding-top: unset;
      background-color: white;
      background-image: unset;
      flex-direction: row;
      justify-content: flex-end;

      .active {
        color: $color-secondary !important;
      }

      .menu-button {
        font-size: 14px;
        color: $color-gray-dark;
        margin-top: unset;
        margin-left: 3%;
        margin-right: 3%;
      }

      .btn-3 {
        display: block;
        cursor: pointer;
        margin-left: 3%;
      }
    }
  }
}

